tests/ui/diagnostic-not-implemented-issue-1296.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:51:19
   |
51 |     Foo.write_obj(NotZerocopy(()));
   |                   ^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:51:19
   |
51 |     Foo.write_obj(NotZerocopy(()));
   |                   ^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
